--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5,7 +5,9 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "target = {}"
+   ]
   },
   {
    "cell_type": "code",
@@ -22,11 +24,9 @@
     "    return False\n",
     "\n",
     "def parse_file(filename):\n",
-    "    index = {\n",
-    "        '水月': [],\n",
-    "        '水陈': [],\n",
-    "        '其他': []\n",
-    "    }\n",
+    "    index = {operator: [] for operator in target}\n",
+    "    index['其他'] = []\n",
+    "    \n",
     "    summed_lines = []\n",
     "    with open(filename, encoding='utf-8') as f:\n",
     "        for lineno, line in enumerate(f.readlines()):\n",
@@ -35,16 +35,12 @@
     "            for part in parts:\n",
     "                if part.isnumeric():\n",
     "                    accumulated += int(part)\n",
-    "                elif part == '水月':\n",
-    "                    index['水月'].append((lineno, accumulated))\n",
-    "                elif part == '水陈':\n",
-    "                    index['水陈'].append((lineno, accumulated))\n",
+    "                elif part in target:\n",
+    "                    index[part].append((lineno, accumulated))\n",
     "                elif contains_chinese(part):\n",
     "                    index['其他'].append((lineno, accumulated))\n",
     "            summed_lines.append(accumulated)\n",
-    "    return index, summed_lines\n",
-    "\n",
-    "index, summed_lines = parse_file(filename)"
+    "    return index, summed_lines"
    ]
   },
   {
@@ -69,6 +65,8 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "from pylab import mpl\n",
+    "\n",
+    "index, summed_lines = parse_file(filename)\n",
     "\n",
     "mpl.rcParams['font.sans-serif'] = ['Microsoft YaHei']\n",
     "mpl.rcParams['axes.unicode_minus']\n",
