--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "filename = 'sample.csv'\n",
-    "output_filename = 'output/output.png'\n",
+    "output_filename = 'output.png'\n",
     "target = {\n",
     "#     operator: (marker, markersize, color)\n",
     "    '帕拉斯': ('*', 48, 'red'),\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
